refactor: add warning log for legacy server